OWL-5079 Forums: Fixed spacing issue with title on compose and reply pages

--- a/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
+++ b/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
@@ -1090,9 +1090,10 @@ div.msgcntr-profile-qtip {
 
 .composeReply
 {
-       display: flex;
-       flex-direction: column;
-       gap: 10px 0;
+	display: flex;
+	flex-direction: column;
+	gap: 10px 0;
+	margin-top: 10px;
 }
 
 @media only screen and (min-width: 1840px)
